# Simple-OCR

./: .gitignore  README.md  pyproject.toml  requirements.txt
assets/fonts/: README.md
assets/words/: common_words.txt
src/ocr/: __init__.py  charset.py  config.py  data.py  decode.py  generate_data.py  metrics.py  model.py  predict.py  preprocessing.py  text_generator.py  train.py
src/ocr_from_scratch.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_charset.py  test_decode.py  test_generator.py  test_model.py  test_preprocessing.py
