[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocr-from-scratch"
version = "0.1.0"
description = "Printed English OCR from scratch with synthetic data and a CRNN-CTC model."
readme = "README.md"
requires-python = ">=3.12,<3.13"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
